# QuixNet

./: .gitmodules  ClearCbProject.sh  ClearCmProject.sh  ClearVsProject.bat  ExitServers.sh  LICENSE  README.md  RebuildCmProject.sh  RebuildVsProject.bat  RefreshDependence.sh  StartServers.sh  submodule-readme.txt  submodule.bat  submodule.sh
.github/: FUNDING.yml
agent_server/: CMakeLists.txt
cache_server/: CMakeLists.txt
cmake_modules/: functions.cmake
deployment/: 000-default.conf  Dockerfile  docker-compose.yaml
doc/: Control deployment.vsd  GeneralDesign.vsd  Service topology.vsd  TCP通讯包结构.vsd  protobuffer.txt  服务端构架V1.vsd  登录与Web平台接口.txt
game_server/: CMakeLists.txt
login_server/: CMakeLists.txt
login_server/cbproject/: LoginServer.cbp
login_server/src/: App.config  App_zh_cn.config  IncludeTemplate.h  LoginPlayer.h  LoginServerRegister.cpp  LoginServerRegister.h  ServerRegisterHelper.h  templatefiles.csv
login_server/src/framework/: BodyBitStream.h  CacheModule.h  ControlArgument.h  ControlCentreModule.cpp  ControlCentreServiceImp.cpp  ICacheValue.h  IncludeModule.h  LoginModule.cpp  LoginModule.h  LoginServer.cpp  LoginServer.h  LoginServerRegister.cpp  LoginServerRegister.h  LoginServiceImp.cpp  LoginServiceImp.h  LoginWebRequest.cpp  LoginWebRequest.h  ModuleOperateHelper.h  NodeDefines.cpp  NodeDefines.h  ProtoRpczServiceImpl.cpp  ServerRegisterHelper.h  TemplateBase.cpp  TemplateBase.h  WorkerModule.cpp  WorkerServiceImp.cpp  WorkerServiceImpHelper.h  cache.rpcz.h  controlcentre.rpcz.h  data_packet.pb.cc  data_packet.pb.h  interest_packet.pb.h  main.cpp  msg_login.pb.cc  msg_login.pb.h  msg_login_character.pb.cc  msg_login_character.pb.h  void_packet.pb.h
login_server/vsproject/: LoginServer.sln  LoginServer.vcxproj  LoginServer.vcxproj.filters  login_server.sln  login_server.vcxproj  login_server.vcxproj.filters
master_server/: CMakeLists.txt
mysql_script/: create_database.sql
shared/: CMakeLists.txt
shared/bins/win32/libcurl/: libcurld.exp
shared/cbproject/: publish.sh
shared/cbproject/Shared/: Shared.cbp  main.cpp
shared/include/: Common.h  ControlCMD.h  ShareConfig.h  ShareDefines.h  ShareDll.h  ShareErrors.h
shared/include/database/: CallBackDB.h  Database.h  DatabaseEnv.h  Field.h  MySQLDatabase.h
shared/include/httpclient/: CurlMultiMT.h  HttpClientManager.h  HttpRequest.h
shared/include/module/: INotificationBody.h  ModuleEnv.h  ModuleManager.h
shared/include/network/: BitStream.h  NetworkSync.h  NetworkTrace.h  NetworkTypes.h  ReceiveBuffer.h  SingleProducerConsumer.h  SmallBuffer.h  TCPLinkInterface.h  TCPPacketInterface.h  TCPSocketBSD.h  TCPSocketBase.h  TCPSocketLinux.h  TCPSocketWin.h  TCPSocketWin32.h  TCPThreadInfo.h  TCPThreadList.h  TCPThreadPool.h
shared/include/threading/: AtomicCas.h  AtomicLock.h  CThreads.h  CircleQueue.h  CondVar.h  CriticalSection.h  EnvLock.h  EnvLockHelper.h  EnvRWLock.h  FastMutex.h  FunEnvHelper.h  IEnvLock.h  IEnvLockBase.h  IEnvRWLock.h  ILock.h  IRWLock.h  IWrapBase.h  IWrapLock.h  IWrapRWLock.h  IteratorBase.h  LockFreeArrayQueue.h  LockFreeNode.h  LockFreeQueue.h  MessageData.h  Mutex.h  OperationAsync.h  OperationBase.h  OperationIterate.h  OperationSync.h  ReadWriteLock.h  RecursiveRWLock.h  ScopedEnvLock.h  ScopedEnvRWLock.h  ScopedLock.h  ScopedRWLock.h  ScopedWrapLock.h  ScopedWrapRWLock.h  SpinEvent.h  SpinLock.h  SpinRWLock.h  (+17 more)
shared/include/timerevent/: AgentMethod.h  CommandManager.h  SimpleEvent.h  SimpleEventArray.h  SimpleMultiEvent.h  SysTickCount.h  TimerEvent.h  TimerManager.h  TimerManagerHelper.h  TimestampManager.h
shared/include/utility/: AreaOfInterest2D.h  AreaOfInterest3D.h  ArrayList.h  ArrayMap.h  AutoPointer.h  BitSignSet.h  CallBack.h  CrashDump.h  CsvParser.h  DynamicBitset.h  ExceptionManager.h  GlobalIDFactory.h  GuidFactory.h  IObject.h  IRankData.h  IStream.h  ITComparer.h  ITPriorityQueue.h  LocalIDFactory.h  Log.h  Md5.h  ObjectSet.h  PoolBase.h  PrintStackTrace.h  ProcessStatus.h  RankSetMT.h  ReferObject.h  ScopedPointer.h  SeparatedStream.h  Singleton.h  SkipList.h  StoreStream.h  StreamDataType.h  StringResolved.h  TPriorityQueue.h  TimeSeries.h  TinyJson.h  TransferStream.h  UniquePointer.h  Utf8.h  (+15 more)
shared/libs/linux32/boost/: libboost_chrono.so.1.61.0  libboost_date_time.so.1.61.0  libboost_system.so.1.61.0  libboost_thread.so.1.61.0
shared/libs/linux32/mysql/: libmysqlclient.so.20
shared/libs/linux32/protobuf/: libprotobuf-lite.so.8.0.0
shared/libs/linux32/shared/debug/: libShared.so.1
shared/libs/linux32/shared/release/: libShared.so.1.0.0
shared/libs/win32/zeromq/debug/: libzmq.exp  libzmq.ilk
shared/libs/win32/zeromq/release/: libzmq.exp
shared/source/: Common.cpp
shared/source/database/: CreateInterface.cpp  Database.cpp  MySQLDatabase.cpp
shared/source/httpclient/: CurlMultiMT.cpp  HttpClientManager.cpp  HttpRequest.cpp
shared/source/module/: ModuleManager.cpp
shared/source/network/: BitStream.cpp  NetworkTrace.cpp  NetworkTypes.cpp  ReceiveBuffer.cpp  TCPLinkInterface.cpp  TCPPacketInterface.cpp  TCPSocketBSD.cpp  TCPSocketLinux.cpp  TCPSocketWin.cpp  TCPSocketWin32.cpp  TCPThreadPool.cpp
shared/source/threading/: CondVar.cpp  ReadWriteLock.cpp  RecursiveRWLock.cpp  ScopedRWLock.cpp  SpinRecursiveRWLock.cpp  SysCurrentThreadId.cpp  ThreadIndexManager.cpp  ThreadPool.cpp  WrapControl.cpp
shared/source/timerevent/: CommandManager.cpp  SysTickCount.cpp  TimerEvent.cpp  TimerManager.cpp  TimestampManager.cpp
shared/source/utility/: BitSignSet.cpp  CrashDump.cpp  CsvParser.cpp  ExceptionManager.cpp  GuidFactory.cpp  Log.cpp  Md5.cpp  PrintStackTrace.cpp  ProcessStatus.cpp  SeparatedStream.cpp  StoreStream.cpp  TimeSeries.cpp  TransferStream.cpp  Utf8.cpp  itostr.c
shared/vsproject/: Shared.sln  publish.bat  shared.sln
shared/vsproject/Debug/: Shared.exp
shared/vsproject/Release/: Shared.exp
shared/vsproject/Shared/: ReadMe.txt  Shared.cpp  Shared.vcxproj  Shared.vcxproj.filters  dllmain.cpp  stdafx.cpp
shared/vsproject/shared/: shared.vcxproj  shared.vcxproj.filters
submodule/: boost.cmake  (+1 more)
(+497 files in other folders)
